--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,8 @@ sudo: false
 language: ruby
 rvm:
   - 2.3.1
+services:
+  - elasticsearch
+before_script:
+  - sleep 10
 before_install: gem install bundler -v 1.12.5
