--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ sudo: false
 language: ruby
 rvm:
   - 2.3.1
+  - 1.9.3
+gemfile: Gemfile.ci
+env:
+  - "DATABASE_URL=sqlite::memory:"
+  - "ELASTICSEARCH_URL=http://localhost:9200"
 services:
   - elasticsearch
 before_script:
