--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ rvm:
   - 1.9.3
 gemfile: Gemfile.ci
 env:
-  - "DATABASE_URL=sqlite::memory:"
-  - "ELASTICSEARCH_URL=http://localhost:9200"
+  - DATABASE_URL="sqlite::memory:" ELASTICSEARCH_URL="http://localhost:9200"
 services:
   - elasticsearch
 before_script:
+  - bundle exec rake proxes:migrate
   - sleep 10
 before_install: gem install bundler -v 1.12.5
