--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,8 @@ services:
 before_script:
   - sleep 10
 before_install: gem install bundler -v 1.12.5
+addons:
+  code_climate:
+    repo_token: 1f562305f75e169f5f5eca3b738fee879550c98e50099c2b9cd6ae71478007a0
+after_success:
+  - bundle exec codeclimate-test-reporter
