chore: Add Roles to seed task. Run seed in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ services:
   - elasticsearch
 before_script:
   - sleep 10
+  - bundle exec rake proxes:seed
 before_install: gem install bundler -v 1.12.5
 addons:
   code_climate:
