--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "gulp": "^3.9.1",
+    "gulp-ci": "0.0.0",
     "gulp-util": "^3.0.7",
     "vinyl-source-stream": "^1.1.0"
   }
