--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ services:
   - elasticsearch
 before_script:
   - sleep 10
+  - bundle exec rake ditty:prep
 before_install: gem install bundler -v 1.12.5
 addons:
   code_climate:
