--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ deploy:
       tags: true
       repo: EagerELK/proxes
   - provider: script
-    script: deploy_docker.sh
+    script: ./deploy_docker.sh
     on:
       tags: true
 
