chore: Include specs in rubocop check

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,5 @@
+require: rubocop-rspec
+
 Metrics/LineLength:
   Max: 120
 
@@ -7,7 +9,7 @@ Style/Documentation:
 Style/NumericPredicate:
   Enabled: false
 
-Style/LeadingCommentSpace:
+Layout/LeadingCommentSpace:
   Exclude:
     - 'config.ru'
 
