--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,9 @@ before_script:
   - "./cc-test-reporter before-build"
   - sleep 10
   - bundle exec rake ditty:prep
+script:
+  - bundle exec rake
+  - bundle exec rubocop --fail-level W lib views specs
 after_script:
   - "./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT"
 deploy:
